--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,10 @@ http {
             proxy_redirect off;
         }
 
+        location /static {
+            alias /home/app/web/staticfiles;
+        }
+
     }
 
 }
