Feature: media files for prod

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,10 @@ http {
             alias /home/app/web/staticfiles;
         }
 
+        location /media {
+            alias /home/app/web/mediafiles;
+        }
+
     }
 
 }
